--- a/app/parkit/GoogleService-Info.plist
+++ b/app/parkit/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCNcMylDjAXsC3efayAX-L0zPI83sJiFWA</string>
+	<string>***</string>
 	<key>GCM_SENDER_ID</key>
 	<string>948803025280</string>
 	<key>PLIST_VERSION</key>
